Added information on running the demonstration application.